# lucy_project

./: .gitignore  designer_workflow.md  index.html  manage.py  pyproject.toml  requirements.txt
apps/evidence/: admin.py  models.py  serializers.py  urls.py  views.py
apps/evidence/migrations/: 0001_initial.py  0002_evidenceitem_notes_evidenceitem_prod_status.py  0003_alter_evidenceitem_item_type_and_more.py  0004_evidenceitem_caption_evidenceitem_end_year_and_more.py  0005_rename_iscirca_evidenceitem_is_circa_and_more.py  0006_related_content_type_related_slug_alter_related_link.py  0007_evidenceitem_transcript.py  (+1 more)
apps/maps/: admin.py  models.py  serializers.py  urls.py  views.py
apps/moments/: frames.json  urls.py  views.py
apps/myths/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/people/: admin.py  models.py  serializers.py  urls.py  views.py
apps/sitewide/: apps.py  models.py  urls.py  views.py
apps/topics/: admin.py  models.py  serializers.py  urls.py  views.py
config/: urls.py
config/settings/: base.py  local.py  remote_db.py
templates/: _main_nav.html  base.html  basic_page.html  home.html  model.html  page_base.html
templates/evidence/: evidence_list.html
templates/moments/: community.html  community_scroll.html  community_scroll_model.html  model-nyt-hiroshige.html  model-nyt-hurricane.html  moment-model.html  moment_base.html  moment_list.html  moment_title.html  more_pop.html  object-fit2-2-2-color.html  object-fit2-2-2.html  proof.html
templates/people/: home.html  menu.html  person-model.html  person_list.html
(+32 files in other folders)
