[tool.poetry]
name = "lucy-project"
version = "0.1.0"
description = "prototype"
authors = ["Don Button <37458717+DigitalGizmo@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "lucy_project"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
